--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,3 +1,3 @@
-FROM amazoncorretto:17-alpine-jdk
-COPY target/*.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+FROM amazoncorretto:11
+COPY target/shareit-gateway-0.0.1-SNAPSHOT.jar shareit-gateway.jar
+ENTRYPOINT ["java","-jar","/shareit-gateway.jar"]
