--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,3 +1,3 @@
-FROM amazoncorretto:17-alpine-jdk
-COPY target/*.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+FROM amazoncorretto:11
+COPY target/shareit-server-0.0.1-SNAPSHOT.jar shareit-server.jar
+ENTRYPOINT ["java","-jar","/shareit-server.jar"]
